k8s-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-version
  labels:
    app: istio-version
    version: v1
    circle: circle-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: istio-version
  template:
    metadata:
      labels:
        app: istio-version
        version: v1
        circle: circle-1
    spec:
      containers:
        - name: istio-version
          image: jeias/istio-verions:latest
          ports:
            - name: metrics1-port
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: istio-service
spec:
  selector:
    app: istio-version
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod-nginx.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: confnginx
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  externalTrafficPolicy: Cluster
  ports:
    - nodePort: 30803
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-version
spec:
  hosts:
    - istio-service
  http:
    - route:
        - destination:
            host: istio-service
            subset: v1
          headers:
            request:
              set:
                x-circle-source: f5d23a57-5607-4306-9993-477e1598cc2a
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-version
spec:
  host: istio-service
  subsets:
    - labels:
        version: v1
      name: v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
  labels:
    app: prometheus-server
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-server
  template:
    metadata:
      labels:
        app: prometheus-server
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.12.0
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.retention.time=7d"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
      volumes:
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus-config
